--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,44 +1,41 @@
 {
-  "window.zoomLevel": 2,
-  "workbench.colorTheme": "Aura Dracula Spirit (Soft)",
+  "animations.Install-Method": "Apc Customize UI++",
+  "apc.imports": [
+    "file:///c:/Users/YogaDharma/.vscode/extensions/brandonkirbyson.vscode-animations-2.0.3/dist/updateHandler.js"
+  ],
+  "editor.fontFamily": "JetBrainsMono Nerd Font,Consolas, 'Courier New', monospace",
+  "editor.fontLigatures": true,
+  "errorLens.enabledDiagnosticLevels": ["error", "warning"],
+  "terminal.integrated.defaultProfile.windows": "PowerShell",
+  "editor.wordWrap": "on",
+  "files.exclude": {
+    "**/.git": false
+  },
+  "workbench.editor.wrapTabs": true,
+  "editor.stickyScroll.enabled": false,
+  "window.zoomLevel": 1,
   "workbench.iconTheme": "material-icon-theme",
   "material-icon-theme.hidesExplorerArrows": true,
   "workbench.tree.renderIndentGuides": "none",
-  "workbench.sideBar.location": "right",
-  "workbench.activityBar.visible": false,
   "workbench.statusBar.visible": false,
-  "workbench.editor.showTabs": false,
-  "workbench.layoutControl.enabled": false,
   "workbench.startupEditor": "none",
   "workbench.tips.enabled": false,
-  "workbench.colorCustomizations": {
-    "editorSuggestWidget.selectedBackground": "#231739",
-    "sideBar.background": "#191521",
-    "list.activeSelectionBackground": "#231739",
-    "list.inactiveSelectionBackground": "#231739",
-    "list.focusBackground": "#231739",
-    "list.hoverBackground": "#231739",
-    "terminalCursor.foreground": "#C45DFF",
-  },
+  "workbench.colorTheme": "One Dark Pro Flat",
   "editor.minimap.enabled": false,
   "editor.guides.indentation": false,
   "editor.renderWhitespace": "none",
   "editor.renderLineHighlight": "none",
   "editor.matchBrackets": "never",
-  "editor.lightbulb.enabled": false,
-  "editor.hover.enabled": false,
-  "editor.showFoldingControls": "never",
-  "editor.scrollbar.horizontal": "hidden",
-  "editor.scrollbar.vertical": "hidden",
+  "editor.lightbulb.enabled": "off",
+  "editor.scrollbar.verticalScrollbarSize": 20,
+  "editor.scrollbar.horizontalScrollbarSize": 20,
   "editor.overviewRulerBorder": false,
   "editor.cursorBlinking": "solid",
   "editor.cursorSmoothCaretAnimation": "on",
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
-  "editor.fontFamily": "Dank Mono",
   "editor.fontSize": 14,
-  "editor.fontLigatures": true,
-  "editor.lineHeight": 2.5,
+  "editor.lineHeight": 2,
   "breadcrumbs.enabled": false,
   "explorer.confirmDragAndDrop": false,
   "explorer.confirmDelete": false,
@@ -48,45 +45,35 @@
   "files.insertFinalNewline": true,
   "extensions.ignoreRecommendations": true,
   "files.autoSave": "afterDelay",
-  "terminal.integrated.fontFamily": "Dank Mono, JetBrainsMono Nerd Font",
-  "terminal.integrated.tabs.enabled": false,
+  "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font",
   "terminal.integrated.lineHeight": 1.5,
   "terminal.integrated.fontSize": 14,
   "terminal.integrated.env.osx": {
     "FIG_NEW_SESSION": "1"
   },
-  "window.titleBarStyle": "native",
-  "apc.electron": {
-    "titleBarStyle": "hiddenInset"
-  },
-  "apc.font.family": "Dank Mono",
+  "apc.font.family": "JetBrainsMono Nerd Font",
   "apc.listRow": {
-    "lists": [
-      "explorer-folders-view",
-      "quick-input-list",
-      "results"
-    ],
+    "lists": ["explorer-folders-view", "quick-input-list", "results"],
     "height": 30
   },
   "apc.stylesheet": {
-    ".title-actions": "display: none !important",
     ".quick-input-widget.show-file-icons, .editor-widget.find-widget": "box-shadow: none !important",
     ".filematch .monaco-icon-label:before, .custom-list-row.results .monaco-list-row .monaco-icon-label:before": "background-position: 0 bottom !important",
     ".filematch .monaco-count-badge": "padding: 5px 6px 0 6px !important",
     ".sidebar .title-label": "padding: 0 !important",
     ".monaco-workbench .monaco-list:not(.element-focused):focus:before": "outline: none !important",
     ".sidebar": "border: none !important",
-    ".monaco-editor .cursors-layer .cursor": "background-image: linear-gradient(135deg, #67D0FF 10%, #C45DFF 100%)",
     ".quick-input-list-row div": "display: flex !important; align-items: center !important",
-    ".panel .composite.title": "visibility: hidden !important",
-    ".title.show-file-icons .label-container .monaco-icon-label.file-icon": "padding-bottom: 6px !important",
-    ".sidebar .title-label h2": "line-height: 2.8 !important",
     ".monaco-editor .scroll-decoration": "display: none !important",
-    ".monaco-scrollable-element > .shadow.top": "display: none !important",
-    ".monaco-split-view2 > .monaco-scrollable-element > .split-view-container": "background: #191521 !important",
+    ".monaco-scrollable-element > .shadow.top": "display: none !important"
   },
-  "animations.Install-Method": "Apc Customize UI++",
-  "apc.imports": [
-    "file:///Users/igorbabko/.vscode/extensions/brandonkirbyson.vscode-animations-2.0.1/dist/updateHandler.js"
-  ],
+  "workbench.sideBar.location": "right",
+  "workbench.panel.opensMaximized": "always",
+  "terminal.integrated.cursorStyle": "line",
+  "[php]": {
+    "editor.defaultFormatter": "bmewburn.vscode-intelephense-client"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 }
